swap betwen celsius and fehrenheit

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
           </div>
         </div>
       </div>
+      <div class="temperature-units">
+        <label>
+          <input type="radio" id="celsius" name="units" value="celsius" checked>
+          Celsius
+        </label>
+        <label>
+          <input type="radio" id="fahrenheit" name="units" value="fahrenheit">
+          Fahrenheit
+        </label>
+      </div>
+      
 
     <div class="weather-details">
         <div class="humidity">
